courses/430_programming-languages/assignment-6/tests/error/hw5_error21.nex
fun f() : none
{
}

fun g() : none
{
}

fun f() : none
{
}

print "should not get here:n";
1 / 0;
